SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_14.lang
var x = 14 var y = 10;